<resources>
    <string name="app_name">Books</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="date_published">Date published</string>
    <string name="add">Add</string>
    <string name="infoTitle">Title</string>
    <string name="infoAuthor">Author</string>
    <string name="infoDate">Date</string>
    <string name="delete_book">Delete a book from the list</string>
</resources>
